Completed_first_sections

--- a/index.html
+++ b/index.html
@@ -13,13 +13,63 @@
 </head>
 <body>
    <header>
-       <p>Daniel Majesty Owiri</p>
+       <p>John Doe</p>
        <ul>
            <li>Portfolio</li>
            <li>About</li>
            <li>Content</li>
            <li><i class="far fa-envelope"></i></li>
        </ul>
+       <img src="./Tertiary/Union.png" alt="hamburger">
    </header>
+   <section class="first">
+       <div class="first-head">
+           <h1>Laura Jong</h1>
+           <h2>Software Developer</h2>
+           <p>I can help you build a product , 
+               feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,  
+               don’t hestiate to contact me.
+            </p>
+            <hr class="first-line">
+            <div class="items">
+                <ul>
+                    <li><h4>Language</h4></li>
+                    <li>Javascript</li>
+                    <li>Ruby</li>
+                    <li>Html</li>
+                    <li>Css</li>
+                </ul>
+                <ul>
+                    <li><h4>Frameworks</h4></li>
+                    <li>Bootstrap</li>
+                    <li>Ruby on Rails</li>
+                    <li>RSPec</li>
+                    <li>CapyBara</li>
+                    <li>Selenium</li>
+                </ul>
+                <ul>
+                    <li><h4>Skills</h4></li>
+                    <li>Codekit</li>
+                    <li>Github</li>
+                    <li>Codepen</li>
+                    <li>Gitlab</li>
+                    <li>Terminal</li>
+                </ul>
+            </div>
+            <hr class="first-line">
+       </div>
+       <div class="first-link">
+           <div class="group-55 work-first">
+                <p>Work</p>
+                <img src="./Tertiary/Group 55.png" alt="arrow down">
+           </div>
+           <img src="./Tertiary/Social Media.png" alt="social media icons">
+           <div class="group-55">
+                <img src="./Tertiary/Group 55.png" alt="arrow down">
+                <p>Work</p>
+           </div>
+
+       </div>
+   </section>
 </body>
 </html>
