--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <header>
-       <p>John Doe</p>
+       <p>Daniel Owiri</p>
        <ul>
            <li>Portfolio</li>
            <li>About</li>
@@ -24,7 +24,7 @@
    </header>
    <section class="first">
        <div class="first-head">
-           <h1>Laura Jong</h1>
+           <h1>Daniel Owiri</h1>
            <h2>Software Developer</h2>
            <p>I can help you build a product , 
                feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,  
@@ -61,11 +61,11 @@
        <div class="first-link">
            <div class="group-55 work-first">
                 <p>Work</p>
-                <img src="./Tertiary/Group 55.png" alt="arrow down">
+                <img src="./Tertiary/Group55.png" alt="arrow down">
            </div>
-           <img src="./Tertiary/Social Media.png" alt="social media icons">
+           <img src="./Tertiary/SocialMedia.png" alt="social media icons">
            <div class="group-55">
-                <img src="./Tertiary/Group 55.png" alt="arrow down">
+                <img src="./Tertiary/Group55.png" alt="arrow down~~">
                 <p>Work</p>
            </div>
 
