Added_Middle_Section_of_Project

--- a/index.html
+++ b/index.html
@@ -71,5 +71,87 @@
 
        </div>
    </section>
+
+   <section class="middle-section-work">
+       <div class="middle-section">
+           <h3>My recent work</h3>
+           <hr class="first-line">
+           <div class="stories">
+               <div class="story-left">
+                    <div class="rect"></div>
+                    <div class="desc">
+                        <h4>Multi-Purpose Stories</h4>
+                        <p>A daily selection of privately personalized reads; 
+                            no accounts or sign-ups required. has been the industry's 
+                            standard dummy text ever since the 1500s, when an unknown 
+                            printer took a standard dummy text.
+                        </p>
+                        <div class="skills">
+                            <p>css</p>
+                            <p>html</p>
+                            <p>bootstrap</p>
+                            <p>Ruby</p>
+                        </div>
+                        <button type="button">See Project</button>
+                    </div>
+                </div>
+                <div class="story-left invert">
+                     <div class="desc">
+                         <h4>Multi-Purpose Stories</h4>
+                         <p>A daily selection of privately personalized reads; 
+                             no accounts or sign-ups required. has been the industry's 
+                             standard dummy text ever since the 1500s, when an unknown 
+                             printer took a standard dummy text.
+                         </p>
+                         <div class="skills">
+                             <p>css</p>
+                             <p>html</p>
+                             <p>bootstrap</p>
+                             <p>Ruby</p>
+                         </div>
+                         <button type="button">See Project</button>
+                     </div>
+                     <div class="rect"></div>
+                 </div>
+                 <div class="story-left">
+                      <div class="rect"></div>
+                      <div class="desc">
+                          <h4>Multi-Purpose Stories</h4>
+                          <p>A daily selection of privately personalized reads; 
+                              no accounts or sign-ups required. has been the industry's 
+                              standard dummy text ever since the 1500s, when an unknown 
+                              printer took a standard dummy text.
+                          </p>
+                          <div class="skills">
+                              <p>css</p>
+                              <p>html</p>
+                              <p>bootstrap</p>
+                              <p>Ruby</p>
+                          </div>
+                          <button type="button">See Project</button>
+                      </div>
+                  </div>
+                  <div class="story-left invert">
+                       <div class="desc">
+                           <h4>Multi-Purpose Stories</h4>
+                           <p>A daily selection of privately personalized reads; 
+                               no accounts or sign-ups required. has been the industry's 
+                               standard dummy text ever since the 1500s, when an unknown 
+                               printer took a standard dummy text.
+                           </p>
+                           <div class="skills">
+                               <p>css</p>
+                               <p>html</p>
+                               <p>bootstrap</p>
+                               <p>Ruby</p>
+                           </div>
+                           <button type="button">See Project</button>
+                       </div>
+                       <div class="rect"></div>
+                   </div>
+           </div>
+
+       </div>
+   </section>
 </body>
 </html>
