Added <aside> tag and Enabled hover effect for button

--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
             </div>
             <hr class="first-line">
        </div>
-       <div class="first-link">
-           <div class="group-55 work-first">
+       <section class="first-link">
+           <aside class="group-55 work-first">
                 <p>Work</p>
                 <img src="./Tertiary/Group55.png" alt="arrow down">
-           </div>
+           </aside>
            <img src="./Tertiary/SocialMedia.png" alt="social media icons">
-           <div class="group-55">
+           <aside class="group-55">
                 <img src="./Tertiary/Group55.png" alt="arrow down~~">
                 <p>Work</p>
-           </div>
+           </aside>
 
-       </div>
+       </section>
    </section>
 
    <section class="middle-section-work">
