Cleaned up my codes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <hr class="first-line">
        </div>
-       <section class="first-link">
+       <div class="first-link">
            <aside class="group-55 work-first">
                 <p>Work</p>
                 <img src="./Tertiary/Group55.png" alt="arrow down">
@@ -69,7 +69,7 @@
                 <p>Work</p>
            </aside>
 
-       </section>
+       </div>
    </section>
 
    <section class="middle-section-work">
