--- a/index.html
+++ b/index.html
@@ -153,5 +153,22 @@
 
        </div>
    </section>
+   <section class="contact">
+    <div class="contact-text">
+         <h5 class="chat">Lets's Chat!</h5>
+         <h5 class="mobile">CONTACT US</h5>
+         <p>If you have an application you are interested in developing, 
+         a feature that you need built or a project that needs coding. I’d love to help with it </p>
+    </div>
+    <form action="contact" class="contact-form">
+        <div class="data">
+            <input type="text" class="contact-element" name="user-fname" placeholder="First Name"><br class="custom">
+            <input type="text" class="contact-element" name="user-lname" placeholder="Last Name">
+        </div>
+        <label for="email"></label>
+        <input type="email" id="email" class="contact-element1" name="user-email" placeholder="Email Address"><br>
+        <textarea name="user-message" class="contact-element2" cols="30" rows="10" placeholder="Write your message here"></textarea><br><br>
+        <button type="button" class="contact-button">Seen</button>
+    </form>
 </body>
 </html>
