Add ending of sectin in html

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
             <img src="./Tertiary/SocialMedia.png" alt="social media icons">
             <p>emailhere@email.com</p>
         </footer>
+        </section>
 </body>
 
 </html>
