Ädd space between the mail field and the message field and modified button

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <label for="email"></label>
             <input type="email" id="email" class="contact-element1" name="user-email" placeholder="Email Address"><br>
             <textarea name="user-message" class="contact-element2" cols="30" rows="10" placeholder="Write your message here"></textarea><br><br>
-            <button type="button" class="contact-button">Seen</button>
+            <button type="button" class="contact-button">See Project</button>
         </form>
         <footer class="socials">
             <img src="./Tertiary/SocialMedia.png" alt="social media icons">
