--- a/index.html
+++ b/index.html
@@ -17,25 +17,14 @@
     <header>
         <a href="#">Daniel Owiri</a>
         <ul>
+        <div>
             <a href="#myPortfolio"><li>Portfolio</li></a>
             <a href="#About-section"><li>About</li></a>
             <a href="#Contact-section"><li>Contact</li></a>
             <a href="#send-mail"><li><i class="far fa-envelope"></i></li></a>
+        </div>
         </ul>
         <img src="./assets/images/Union.png" alt="hamburger">
-        <!-- <div>
-            <ul>
-              <li class="nav-item">
-                <a class="nav-link" href="#footer">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pricing">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#cta">Download</a>
-              </li>
-            </ul>
-          </div> -->
     </header>
     <section class="first" id="About-section">
         <div class="first-head">
