--- a/index.html
+++ b/index.html
@@ -1,189 +1,176 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Portfolio Site</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/e744810f7a.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-
-    <body>
-        <header>
-            <a href="#">Daniel Owiri</a>
-            <ul>
-            <div>
-                <a href="#myPortfolio"><li>Portfolio</li></a>
-                <a href="#About-section"><li>About</li></a>
-                <a href="#Contact-section"><li>Contact</li></a>
-                <a href="#send-mail"><li><i class="far fa-envelope"></i></li></a>
-            </div>
-            </ul>
-            <img src="./assets/images/Union.png" alt="hamburger">
-        </header>
-        <section class="first" id="About-section">
-            <div class="first-head">
-                <h1>Daniel Owiri</h1>
-                <h2>Software Developer</h2>
-                <p>I can help you build a product ,
-                    feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
-                    don’t hestiate to contact me.
+  <html lang="en">
+  <head>  
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e744810f7a.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+  </head>  
+  <body>
+    <header>
+      <a href="#">Daniel Owiri</a>
+      <ul class="header-icons">
+        <li><a href="#myPortfolio">Portfolio</a></li>
+        <li><a href="#About-section">About</a></li>
+        <li><a href="#Contact-section">Contact</a></li>
+        <li><a href="#send-mail"><i class="far fa-envelope"></i></a></li>
+      </ul>
+        <img src="./assets/images/Union.png" alt="hamburger">
+    </header>
+    <section class="first" id="About-section">
+      <div class="first-head">
+        <h1>Daniel Owiri</h1>
+        <h2>Software Developer</h2>
+        <p>I can help you build a product ,
+          feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
+          don’t hestiate to contact me.
+        </p>
+        <hr class="first-line">
+        <div class="items">
+          <ul>
+            <li><h4>Language</h4></li>
+            <li>Javascript</li>
+            <li>Ruby</li>
+            <li>Html</li>
+            <li>Css</li>
+          </ul>
+          <ul>
+            <li><h4>Frameworks</h4></li>
+            <li>Bootstrap</li>
+            <li>Ruby on Rails</li>
+            <li>RSPec</li>
+            <li>CapyBara</li>
+            <li>Selenium</li>
+          </ul>
+          <ul>
+            <li><h4>Skills</h4></li>
+            <li>Codekit</li>
+            <li>Github</li>
+            <li>Codepen</li>
+            <li>Gitlab</li>
+            <li>Terminal</li>
+          </ul>
+        </div>
+          <hr class="first-line">
+      </div>
+      <div class="first-link">
+        <aside class="group-55 work-first">
+            <p>Work</p>
+            <img src="./assets/images/Group55.png" alt="arrow down">
+        </aside>
+        <img src="./assets/images/social_media.png" alt="social media icons">
+        <aside class="group-55">
+            <img src="./assets/images/Group55.png" alt="arrow down~~">
+            <p>Work</p>
+        </aside>
+      </div>
+    </section>  
+    <section class="middle-section-work" id="myPortfolio">
+      <div class="middle-section">
+        <h3>My recent work</h3>
+        <hr class="first-line">
+        <div class="stories">
+          <div class="story-left">
+              <div class="rect"></div>
+              <div class="desc">
+                <h4>Multi-Purpose Stories</h4>
+                <p>A daily selection of privately personalized reads;
+                    no accounts or sign-ups required. has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a standard dummy text.
                 </p>
-                <hr class="first-line">
-                <div class="items">
-                    <ul>
-                        <li>
-                            <h4>Language</h4>
-                        </li>
-                        <li>Javascript</li>
-                        <li>Ruby</li>
-                        <li>Html</li>
-                        <li>Css</li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <h4>Frameworks</h4>
-                        </li>
-                        <li>Bootstrap</li>
-                        <li>Ruby on Rails</li>
-                        <li>RSPec</li>
-                        <li>CapyBara</li>
-                        <li>Selenium</li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <h4>Skills</h4>
-                        </li>
-                        <li>Codekit</li>
-                        <li>Github</li>
-                        <li>Codepen</li>
-                        <li>Gitlab</li>
-                        <li>Terminal</li>
-                    </ul>
+                <div class="skills">
+                  <p>css</p>
+                  <p>html</p>
+                  <p>bootstrap</p>
+                  <p>Ruby</p>
                 </div>
-                <hr class="first-line">
-            </div>
-            <div class="first-link">
-                <aside class="group-55 work-first">
-                    <p>Work</p>
-                    <img src="./assets/images/Group55.png" alt="arrow down">
-                </aside>
-                <img src="./assets/images/social_media.png" alt="social media icons">
-                <aside class="group-55">
-                    <img src="./assets/images/Group55.png" alt="arrow down~~">
-                    <p>Work</p>
-                </aside>
-            </div>
-        </section>
-
-        <section class="middle-section-work" id="myPortfolio">
-            <div class="middle-section">
-                <h3>My recent work</h3>
-                <hr class="first-line">
-                <div class="stories">
-                    <div class="story-left">
-                        <div class="rect"></div>
-                        <div class="desc">
-                            <h4>Multi-Purpose Stories</h4>
-                            <p>A daily selection of privately personalized reads;
-                                no accounts or sign-ups required. has been the industry's
-                                standard dummy text ever since the 1500s, when an unknown
-                                printer took a standard dummy text.
-                            </p>
-                            <div class="skills">
-                                <p>css</p>
-                                <p>html</p>
-                                <p>bootstrap</p>
-                                <p>Ruby</p>
-                            </div>
-                            <button type="button">See Project</button>
-                        </div>
-                    </div>
-                    <div class="story-left invert">
-                        <div class="desc">
-                            <h4>Multi-Purpose Stories</h4>
-                            <p>A daily selection of privately personalized reads;
-                                no accounts or sign-ups required. has been the industry's
-                                standard dummy text ever since the 1500s, when an unknown
-                                printer took a standard dummy text.
-                            </p>
-                            <div class="skills">
-                                <p>css</p>
-                                <p>html</p>
-                                <p>bootstrap</p>
-                                <p>Ruby</p>
-                            </div>
-                            <button type="button">See Project</button>
-                        </div>
-                        <div class="rect"></div>
-                    </div>
-                    <div class="story-left">
-                        <div class="rect"></div>
-                        <div class="desc">
-                            <h4>Multi-Purpose Stories</h4>
-                            <p>A daily selection of privately personalized reads;
-                                no accounts or sign-ups required. has been the industry's
-                                standard dummy text ever since the 1500s, when an unknown
-                                printer took a standard dummy text.
-                            </p>
-                            <div class="skills">
-                                <p>css</p>
-                                <p>html</p>
-                                <p>bootstrap</p>
-                                <p>Ruby</p>
-                            </div>
-                            <button type="button">See Project</button>
-                        </div>
-                    </div>
-                    <div class="story-left invert">
-                        <div class="desc">
-                            <h4>Multi-Purpose Stories</h4>
-                            <p>A daily selection of privately personalized reads;
-                                no accounts or sign-ups required. has been the industry's
-                                standard dummy text ever since the 1500s, when an unknown
-                                printer took a standard dummy text.
-                            </p>
-                            <div class="skills">
-                                <p>css</p>
-                                <p>html</p>
-                                <p>bootstrap</p>
-                                <p>Ruby</p>
-                            </div>
-                            <button type="button">See Project</button>
-                        </div>
-                        <div class="rect"></div>
-                    </div>
+                <button type="button">See Project</button>
+              </div>
+          </div>
+          <div class="story-left invert">
+              <div class="desc">
+                <h4>Multi-Purpose Stories</h4>
+                <p>A daily selection of privately personalized reads;
+                    no accounts or sign-ups required. has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a standard dummy text.
+                </p>
+                <div class="skills">
+                  <p>css</p>
+                  <p>html</p>
+                  <p>bootstrap</p>
+                  <p>Ruby</p>
                 </div>
+                <button type="button">See Project</button>
+              </div>
+              <div class="rect"></div>
             </div>
-        </section>
-
-        <section class="contact" id="Contact-section">
-            <div class="contact-text">
-                <h5 class="chat">Lets's Chat!</h5>
-                <h5 class="mobile">CONTACT US</h5>
-                <p>If you have an application you are interested in developing,
-                    a feature that you need built or a project that needs coding. I’d love to help with it </p>
-            </div>
-            <form action="https://formspree.io/f/mayadbao" method="POST">
-                <div class="data">
-                    <input type="text" class="contact-element" name="user-f&lname" placeholder="First and Last Name">
+            <div class="story-left">
+              <div class="rect"></div>
+                <div class="desc">
+                  <h4>Multi-Purpose Stories</h4>
+                  <p>A daily selection of privately personalized reads;
+                    no accounts or sign-ups required. has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a standard dummy text.
+                  </p>
+                  <div class="skills">
+                    <p>css</p>
+                    <p>html</p>
+                    <p>bootstrap</p>
+                    <p>Ruby</p>
+                  </div>
+                  <button type="button">See Project</button>
                 </div>
-                <label for="email"></label>
-                <input type="email" id="email" class="contact-element1" name="_replyto" placeholder="danielowiri4zoe@gmail.com"><br>
-                <label for="message"></label>
-                <textarea name="message" id="message" class="contact-element2" cols="30" rows="10" placeholder="Write your message here"></textarea><br><br>
-                <button type="submit" class="contact-button">Send message</button>
-            </form>
-            <footer class="socials" id="send-mail">
-                <img src="./assets/images/social_media.png" alt="social media icons">
-                <p>danielowiri4zoe@email.com</p>
-            </footer>
-        </section>
-    </body>
-
-</html>
+          </div>
+          <div class="story-left invert">
+                <div class="desc">
+                  <h4>Multi-Purpose Stories</h4>
+                  <p>A daily selection of privately personalized reads;
+                    no accounts or sign-ups required. has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown
+                    printer took a standard dummy text.
+                  </p>
+                  <div class="skills">
+                    <p>css</p>
+                    <p>html</p>
+                    <p>bootstrap</p>
+                    <p>Ruby</p>
+                  </div>
+                 <button type="button">See Project</button>
+               </div>               
+          </div>
+        </div>
+      </div>
+    </section>  
+    <section class="contact" id="Contact-section">
+      <div class="contact-text">
+        <h5 class="chat">Lets's Chat!</h5>
+        <h5 class="mobile">CONTACT US</h5>
+        <p>If you have an application you are interested in developing,
+           a feature that you need built or a project that needs coding. I’d love to help with it 
+        </p>
+      </div>
+      <form action="https://formspree.io/f/mayadbao" method="POST">
+        <div class="data">
+          <input type="text" class="contact-element" name="user-f&lname" placeholder="First and Last Name">
+        </div>
+        <label for="email"></label>
+        <input type="email" id="email" class="contact-element1" name="_replyto" placeholder="danielowiri4zoe@gmail.com"><br>
+        <label for="message"></label>
+        <textarea name="message" id="message" class="contact-element2" cols="30" rows="10" placeholder="Write your message here"></textarea><br><br>
+        <button type="submit" class="contact-button">Send message</button>
+      </form>
+      <footer class="socials" id="send-mail">
+        <img src="./assets/images/social_media.png" alt="social media icons">
+        <p>danielowiri4zoe@email.com</p>
+      </footer>
+    </section>
+  </body>  
+</html>  
