Add styles to contact form

--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
             <button type="submit" class="contact-button">Send message</button>
         </form>
         <hr class="bottom-line">
+        <footer class="socials" id="send-mail">
+          <img src="./assets/images/social_media.png" alt="social media icons">
+          <p>danielowiri4zoe@email.com</p>
+        </footer>
+      </section>
 </body>
 
 </html>
