--- a/index.html
+++ b/index.html
@@ -24,148 +24,160 @@
         </ul>
         <img src="./assets/images/Union.png" alt="hamburger">
     </header>
-    <section class="first" id="About-section">
-        <div class="first-head">
-            <h1>Daniel Owiri</h1>
-            <h2>Software Developer</h2>
-            <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
-            </p>
-            <hr class="first-line">
-            <div class="items">
-                <ul>
-                    <li>
-                        <h4>Language</h4>
-                    </li>
-                    <li>Javascript</li>
-                    <li>Ruby</li>
-                    <li>Html</li>
-                    <li>Css</li>
-                </ul>
-                <ul>
-                    <li>
-                        <h4>Frameworks</h4>
-                    </li>
-                    <li>Bootstrap</li>
-                    <li>Ruby on Rails</li>
-                    <li>RSPec</li>
-                    <li>CapyBara</li>
-                    <li>Selenium</li>
-                </ul>
-                <ul>
-                    <li>
-                        <h4>Skills</h4>
-                    </li>
-                    <li>Codekit</li>
-                    <li>Github</li>
-                    <li>Codepen</li>
-                    <li>Gitlab</li>
-                    <li>Terminal</li>
-                </ul>
+    <main class="app-container">
+        <section class="first" id="About-section">
+            <div class="first-head">
+                <h1>Daniel Owiri</h1>
+                <h2>Software Developer</h2>
+                <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+                </p>
+                <hr class="first-line">
+                <div class="items">
+                    <ul>
+                        <li>
+                            <h4>Language</h4>
+                        </li>
+                        <li>Javascript</li>
+                        <li>Ruby</li>
+                        <li>Html</li>
+                        <li>Css</li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h4>Frameworks</h4>
+                        </li>
+                        <li>Bootstrap</li>
+                        <li>Ruby on Rails</li>
+                        <li>RSPec</li>
+                        <li>CapyBara</li>
+                        <li>Selenium</li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <h4>Skills</h4>
+                        </li>
+                        <li>Codekit</li>
+                        <li>Github</li>
+                        <li>Codepen</li>
+                        <li>Gitlab</li>
+                        <li>Terminal</li>
+                    </ul>
+                </div>
+                <hr class="first-line">
             </div>
-            <hr class="first-line">
-        </div>
-        <div class="first-link">
-            <aside class="group-55 work-first">
-                <p>Work</p>
-                <img src="./assets/images/Group55.png" alt="arrow down">
-            </aside>
-            <img src="./assets/images/social_media.png" alt="social media icons">
-            <aside class="group-55">
-                <img src="./assets/images/Group55.png" alt="arrow down~~">
-                <p>Work</p>
-            </aside>
-        </div>
-    </section>
-    <section class="middle-section-work" id="myPortfolio">
-        <div class="middle-section">
-            <h3>My recent work</h3>
-            <hr class="first-line">
-            <div class="stories">
-                <div class="story-left">
-                    <div class="rect"></div>
-                    <div class="desc">
-                        <h4>Multi-Purpose Stories</h4>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-                        </p>
-                        <div class="skills">
-                            <p>css</p>
-                            <p>html</p>
-                            <p>bootstrap</p>
-                            <p>Ruby</p>
+            <div class="first-link">
+                <aside class="group-55 work-first">
+                    <p>Work</p>
+                    <img src="./assets/images/Group55.png" alt="arrow down">
+                </aside>
+                <img src="./assets/images/social_media.png" alt="social media icons">
+                <aside class="group-55">
+                    <img src="./assets/images/Group55.png" alt="arrow down~~">
+                    <p>Work</p>
+                </aside>
+            </div>
+        </section>
+        <section class="middle-section-work" id="myPortfolio">
+            <div class="middle-section">
+                <h3>My recent work</h3>
+                <hr class="first-line">
+                <div class="stories">
+                    <div class="story-left">
+                        <div class="rect"></div>
+                        <div class="desc">
+                            <h4>Multi-Purpose Stories</h4>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown 
+                                printer took a standard dummy text.
+                            </p>
+                            <div class="skills">
+                                <p>css</p>
+                                <p>html</p>
+                                <p>bootstrap</p>
+                                <p>Ruby</p>
+                            </div>
+                            <button type="button">See Project</button>
                         </div>
-                        <button type="button">See Project</button>
                     </div>
-                </div>
-                <div class="story-left invert">
-                    <div class="desc">
-                        <h4>Multi-Purpose Stories</h4>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-                        </p>
-                        <div class="skills">
-                            <p>css</p>
-                            <p>html</p>
-                            <p>bootstrap</p>
-                            <p>Ruby</p>
+                    <div class="story-left invert">
+                        <div class="desc">
+                            <h4>Multi-Purpose Stories</h4>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown 
+                                printer took a standard dummy text.
+                            </p>
+                            <div class="skills">
+                                <p>css</p>
+                                <p>html</p>
+                                <p>bootstrap</p>
+                                <p>Ruby</p>
+                            </div>
+                            <button type="button">See Project</button>
                         </div>
-                        <button type="button">See Project</button>
+                        <div class="rect"></div>
                     </div>
-                    <div class="rect"></div>
-                </div>
-                <div class="story-left">
-                    <div class="rect"></div>
-                    <div class="desc">
-                        <h4>Multi-Purpose Stories</h4>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-                        </p>
-                        <div class="skills">
-                            <p>css</p>
-                            <p>html</p>
-                            <p>bootstrap</p>
-                            <p>Ruby</p>
+                    <div class="story-left">
+                        <div class="rect"></div>
+                        <div class="desc">
+                            <h4>Multi-Purpose Stories</h4>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown 
+                                printer took a standard dummy text.
+                            </p>
+                            <div class="skills">
+                                <p>css</p>
+                                <p>html</p>
+                                <p>bootstrap</p>
+                                <p>Ruby</p>
+                            </div>
+                            <button type="button">See Project</button>
                         </div>
-                        <button type="button">See Project</button>
                     </div>
-                </div>
-                <div class="story-left invert">
-                    <div class="desc">
-                        <h4>Multi-Purpose Stories</h4>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
-                        </p>
-                        <div class="skills">
-                            <p>css</p>
-                            <p>html</p>
-                            <p>bootstrap</p>
-                            <p>Ruby</p>
+                    <div class="story-left invert">
+                        <div class="desc">
+                            <h4>Multi-Purpose Stories</h4>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. 
+                                has been the industry's standard dummy text ever since the 1500s, when an unknown 
+                                printer took a standard dummy text.
+                            </p>
+                            <div class="skills">
+                                <p>css</p>
+                                <p>html</p>
+                                <p>bootstrap</p>
+                                <p>Ruby</p>
+                            </div>
+                            <button type="button">See Project</button>
                         </div>
-                        <button type="button">See Project</button>
+                        <div class="rect"></div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="contact" id="Contact-section">
-        <div class="contact-text">
-            <h5 class="chat">Lets's Chat!</h5>
-            <h5 class="mobile">CONTACT US</h5>
-            <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it
-            </p>
-        </div>
-        <form action="https://formspree.io/f/mayadbao" method="POST">
-            <div class="data">
-                <input type="text" class="contact-element" name="user-f&lname" placeholder="First and Last Name" maxlength="30" required>
+        </section>
+        <section class="contact" id="Contact-section">
+            <div class="contact-text">
+                <h5 class="chat">Lets's Chat!</h5>
+                <h5 class="mobile">CONTACT US</h5>
+                <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it
+                </p>
             </div>
-            <label for="email"></label>
-            <input type="email" id="email" class="contact-element1" name="_replyto" placeholder="danielowiri4zoe@gmail.com" required><br>
-            <label for="message"></label>
-            <textarea name="message" id="message" class="contact-element2" cols="30" rows="10" placeholder="Write your message here" maxlength="500" required></textarea><br><br>
-            <button type="submit" class="contact-button">Send message</button>
-        </form>
-        <hr class="bottom-line">
-        <footer class="socials" id="send-mail">
-          <img src="./assets/images/social_media.png" alt="social media icons">
-          <p>danielowiri4zoe@email.com</p>
-        </footer>
-      </section>
+            <form action="https://formspree.io/f/mayadbao" method="POST">
+                <div class="data">
+                    <input type="text" class="contact-element" name="user-f&lname" placeholder="First and Last Name" maxlength="30" required>
+                </div>
+                <label for="email"></label>
+                <input type="email" id="email" class="contact-element1" name="_replyto" placeholder="danielowiri4zoe@gmail.com" required><br>
+                <label for="message"></label>
+                <textarea name="message" id="message" class="contact-element2" cols="30" rows="10" placeholder="Write your message here" maxlength="500" required></textarea><br><br>
+                <button type="submit" class="contact-button">Send message</button>
+            </form>
+            <hr class="bottom-line">
+            <footer class="socials" id="send-mail">
+              <img src="./assets/images/social_media.png" alt="social media icons">
+              <p>danielowiri4zoe@email.com</p>
+            </footer>
+          </section>
+    </main>
+    
 </body>
 
 </html>
