Add text input for name field with the attribute required and edited the image on my readme.md

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <div class="first-head">
                 <h1>Daniel Owiri</h1>
                 <h2>Software Developer</h2>
-                <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
+                <p>I can help you build a product , feature or website Look through some of 
+                    my work and experience! If you like what you see and have a project you need 
+                    coded, don’t hestiate to contact me.
                 </p>
                 <hr class="first-line">
                 <div class="items">
@@ -155,14 +157,17 @@
         </section>
         <section class="contact" id="Contact-section">
             <div class="contact-text">
-                <h5 class="chat">Lets's Chat!</h5>
+                <h5 class="chat">Let's Chat!</h5>
                 <h5 class="mobile">CONTACT US</h5>
-                <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it
+                <p>If you have an application you are interested in developing, 
+                    a feature that you need built or a project that needs coding. I’d love to help with it
                 </p>
             </div>
             <form action="https://formspree.io/f/mayadbao" method="POST">
                 <div class="data">
-                    <input type="text" class="contact-element" name="user-f&lname" placeholder="First and Last Name" maxlength="30" required>
+                    <input type="text" class="contact-element fname-input" name="user-fname" placeholder="First Name" maxlength="30" required><br class="custom">
+                    <input type="text" class="contact-element" name="user-lname" placeholder="Last Name" maxlength="30" required>
+                    <input type="text" class="contact-element for-mobile" name="user-lname" placeholder="First and Last Name" maxlength="30" required>
                 </div>
                 <label for="email"></label>
                 <input type="email" id="email" class="contact-element1" name="_replyto" placeholder="danielowiri4zoe@gmail.com" required><br>
