--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
             </div>
             <form action="https://formspree.io/f/mayadbao" method="POST">
                 <div class="data">
-                    <input type="text" class="contact-element fname-input" name="user-fname" placeholder="First Name" maxlength="30" required><br class="custom">
+                    <input type="text" class="contact-element fname-input" name="user-fname" placeholder="Jeremy" maxlength="30" required><br class="custom">
                     <input type="text" class="contact-element" name="user-lname" placeholder="Last Name" maxlength="30" required>
                     <input type="text" class="contact-element for-mobile" name="user-lname" placeholder="First and Last Name" maxlength="30" required>
                 </div>
                 <label for="email"></label>
-                <input type="email" id="email" class="contact-element1" name="_replyto" placeholder="danielowiri4zoe@gmail.com" required><br>
+                <input type="email" id="email" class="contact-element1" name="_replyto" placeholder="Email address" required><br>
                 <label for="message"></label>
                 <textarea name="message" id="message" class="contact-element2" cols="30" rows="10" placeholder="Write your message here" maxlength="500" required></textarea><br><br>
-                <button type="submit" class="contact-button">Send message</button>
+                <button type="submit" class="contact-button">Send</button>
             </form>
             <hr class="bottom-line">
             <footer class="socials" id="send-mail">
