Revert "Milestone 5: Animation and Transition"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a class="logo" href="#">Daniel Owiri</a>
+        <a href="#">Daniel Owiri</a>
         <ul class="header-icons">
             <li><a href="#myPortfolio">Portfolio</a></li>
             <li><a href="#About-section">About</a></li>
@@ -27,9 +27,6 @@
     <main class="app-container">
         <section class="first" id="About-section">
             <div class="first-head">
-                <div>
-                    <!-- <img class="top-circles-images" src="./assets/images/two_circles_header.png" alt="top-images"> -->
-                </div>
                 <h1>Daniel Owiri</h1>
                 <h2>Software Developer</h2>
                 <p>I can help you build a product , feature or website Look through some of 
